# VLXI-Cookiecutter-DVC-Dataset

./: .gitignore  LICENSE.template  NOTICE  README-Template-Usage.md  README.md  README.md.template  RELEASE-NOTES.md  RELEASE-NOTES.md.template  cookiecutter.json  pyproject.toml
docs/: Poetry-Quick-Reference.md
extras/: dot-envrc
hooks/: post_gen_project.sh
template-docs/: README-DVC-Dataset-Repository.md  README-Template-Usage.md  RELEASE-NOTES-DVC-Dataset-Repository.md  RELEASE-NOTES.md
template-docs/examples/: LICENSE-DATASET.template  README.md.template
template-docs/extras/: envrc.example
{{cookiecutter.__project_name}}/: .gitignore  .pre-commit-config.yaml  DATASET-LICENSE  README.md  RELEASE-NOTES.md  SOFTWARE-NOTICE  pyproject.toml
{{cookiecutter.__project_name}}/extras/: dot-envrc
{{cookiecutter.dataset_name}}/: .gitignore  README.md  RELEASE-NOTES.md  SOFTWARE-LICENSE  pyproject.toml
{{cookiecutter.dataset_name}}/extras/: dot-envrc
